--- a/testRmarkdown.Rmd
+++ b/testRmarkdown.Rmd
@@ -2,7 +2,9 @@
 title: "Test Markdown"
 author: "Malte Thodberg"
 date: "13 July 2016"
-output: github_document
+output: 
+html_document:
+keep_md: TRUE
 ---
 
 ```{r setup, include=FALSE}
